--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -8,11 +10,11 @@ body {
     margin: 0;
     padding: 0;
     font-weight: 400;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     line-height: 1.58;
     color: #333;
-    background-color: #f4f4f4;
+    background-color: #282840;
 }
 
 body:before {
@@ -31,53 +33,64 @@ body:before {
     clear: both;
 }
 
-
-h1, h2, h3, h4, h5, h6 {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-h1 {
-    font-size: 1.7em;
-}
-
 a {
-    color: #128ff2;
+    color: #FDD172;
 }
 
-button {
-    box-shadow: none;
-    border: 1px solid transparent;
-    font-size: 14px;
-    outline: none;
-    line-height: 100%;
-    white-space: nowrap;
-    vertical-align: middle;
-    padding: 0.6rem 1rem;
-    border-radius: 2px;
-    transition: all 0.2s ease-in-out;
-    cursor: pointer;
-    min-height: 38px;
-}
 
 button.primary {
-    background-color: #42A796;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
-    color: #fff;
+    cursor: pointer;
+
+    padding: 16px 32px;
+
+    background-color: #ffffff;
+    color: #282840;
+    border-radius: 28px;
+    border: none;
+
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
 }
 
-input {
-    font-size: 1rem;
-}
 
 input[type="file"] {
-    border: 1px solid #128ff2;
-    padding: 6px;
-    max-width: 100%;
+    display: none;
 }
 
-.file-input {
-    width: 100%;
+label {
+    border: none;
+    cursor: pointer;
+
+    padding: 16px 32px;
+
+    background-color: #FDD172;
+    color: #282840;
+    border-radius: 28px;
+
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+strong {
+    color: #FDD172;
+}
+
+span {
+    font-weight: bold;
+}
+
+img {
+    margin-left: 10px;
+    width: 16px;
+}
+
+p {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    color: #fff;
 }
 
 .submit-btn {
@@ -94,34 +107,52 @@ input[type="file"] {
     .submit-btn {
         display: inline-block;
         margin-top: 0;
-        margin-left: 10px;
+        margin-left: 30px;
     }
 }
 
-.upload-container {
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: #fff;
-      box-shadow: 0 1px 11px rgba(0, 0, 0, 0.4);
-      margin-top: 60px;
-      min-height: 400px;
-      position: relative;
-      padding: 20px;
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
 }
 
-.upload-header {
-    border-bottom: 1px solid #ececec;
+.upload-container {
+    max-width: 800px;
+    margin-top: 50%;
+    margin-bottom: 50%;
 }
 
 .upload-header h2 {
-    font-weight: 500;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: -10px;
 }
 
-.single-upload {
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-    border-bottom: 1px solid #e8e8e8;
+.single-upload h3 {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+    color: #fff;
+    margin-bottom: 30px;
+}
+
+#singleUploadForm {
+    text-align: center;
+}
+
+#singleFileUploadSuccess {
+    padding-top: 30px;
+}
+
+#singleFileUploadError {
+    padding-top: 30px;
 }
 
 .upload-response {
